--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   font-family: "Sora", sans-serif;
 }
 body {
-/* width: 100%; */
+  /* width: 100%; */
   background-color: #ffffff;
   font-family: sans-serif;
   margin: 40px 100px;
@@ -71,7 +71,6 @@ body {
 .discover-text {
   text-align: center;
   margin-top: 250px;
-
 }
 .discover-text h1 {
   color: #3b3386;
@@ -118,10 +117,10 @@ body {
   padding: 24px 24px;
   border-radius: 24px;
   position: absolute;
-  top:560px;
+  top: 560px;
   left: 280px;
 }
-.form-data1{
+.form-data1 {
   display: none;
 }
 #price-range {
@@ -163,6 +162,10 @@ label {
   height: 18px;
   color: #3b3386;
 }
+.massive-building{
+  display: none;
+  width: 400px;
+}
 .trusted-by {
   text-align: center;
   font-size: 10px;
@@ -178,13 +181,13 @@ label {
   width: 200px;
   height: 50px;
 }
-.explore{
+.explore {
   display: flex;
   flex-direction: column;
 }
 .explore-our-platform h6 {
   font-size: 15px;
-  color: #3B3386;
+  color: #3b3386;
 }
 .explore-our-platform h3 {
   font-family: "Sofa", sans-serif;
@@ -197,7 +200,7 @@ label {
   font-weight: bold;
   width: 480px;
   font-family: "Sofa", sans-serif;
-  color: #554E3B;
+  color: #554e3b;
   line-height: 20px;
   margin-top: 15px;
 }
@@ -291,7 +294,7 @@ label {
   gap: 100px;
   width: 300px;
 }
-.right-island p{
+.right-island p {
   text-align: right;
   font-size: 16px;
   font-family: Sora;
@@ -346,84 +349,84 @@ label {
   gap: 30px;
   margin: 20px 0px;
 }
-.coming-soon-page{
+.coming-soon-page {
   display: flex;
   flex-direction: column;
   text-align: center;
   /* justify-content: center; */
-  background: #FFFBEF;
+  background: #fffbef;
   background-size: contain;
   padding-top: 20px;
   align-items: center;
-  color: var(--rentit-secondary-color-900, #554E3B);
+  color: var(--rentit-secondary-color-900, #554e3b);
   text-align: center;
   margin-top: 450px;
 }
-.feature-available{
+.feature-available {
   font-weight: 600;
 }
-.coming-soon-container{
+.coming-soon-container {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 10px 0px;
   gap: 20px;
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   background-size: contain;
   padding: 10px;
   border-radius: 20px;
 }
-.coming-soon{
-  background-color: #FFE9B0;
+.coming-soon {
+  background-color: #ffe9b0;
   padding: 3px 10px;
   border-radius: 10px;
   font-weight: bold;
 }
-.local-area{
-  color: #14112D;
+.local-area {
+  color: #14112d;
   font-size: 45px;
   font-weight: 800;
   line-height: normal;
   margin: 10px;
 }
-.welcome-apart{
+.welcome-apart {
   width: 458px;
   line-height: 26px;
   font-size: 16px;
   text-align: center;
-  font-family: 'Sora';
+  font-family: "Sora";
 }
-.geo-map{
+.geo-map {
   width: 1100px;
   margin: 50px 0px;
 }
-.footer-container{
+.footer-container {
   display: flex;
   justify-content: space-between;
-  background: #3B3386;
+  background: #3b3386;
   background-size: contain;
   color: white;
   padding: 70px 70px;
   line-height: 40px;
   border-bottom: 1px solid white;
 }
-.footer-data-container{
+.footer-data-container {
   display: flex;
   gap: 50px;
 }
-.rentit-info img{
+.rentit-info img {
   width: 100px;
   cursor: pointer;
 }
-.footer-data h4{
+.footer-data h4 {
   cursor: pointer;
 }
-.footer-data p{
+.footer-data p {
   font-size: 14px;
   font-weight: 400;
   cursor: pointer;
 }
-.reserved-and-social-media{
+.reserved-and-social-media {
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -432,182 +435,260 @@ label {
   font-weight: bold;
   opacity: 0.7;
 }
-.social-media{
+.social-media {
   display: flex;
   gap: 10px;
   cursor: pointer;
 }
-@media (max-width: 700px) {
- 
+.furnished-home {
+  display: none;
+}
+@media (max-width: 400px) {
   .navbar {
-
-   display: flex;
-   justify-content: space-between;
-   margin: 0px 20px;
-   background-color: red;
-   background-size: cover;
-    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 20px;
     height: 100px;
   }
   .form-data {
     display: none;
-}
+  }
+  .first-house {
+    display: flex;
+    justify-content: center;
+    width: 350px;
+    height: 200px;
+    margin-left: -60px;
+  }
+  .retails-houses {
+    display: none;
+  }
+  .form-data1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px -60px;
+    gap: 40px;
+    width: 350px;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: -4px 0px 20px 0px rgba(19, 20, 32, 0.16);
+  }
+  #price-range {
+    width: 300px;
+    background: #fafafa;
+    color: #999999;
+    border: none;
+    outline: none;
+  }
+  .Search-form {
+    display: flex;
+    justify-content: center;
+    align-self: flex-end;
+    width: 100px;
+    border-radius: 8px;
+    background: var(--rentit-primary-color-500-main, #3b3386);
+  }
+  #locations {
+    width: 300px;
+    background-color: #fafafa;
+    color: #999999;
+    border: none;
+    outline: none;
+  }
+  .trusted-by {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 300px;
+    margin: 20px -50px;
+  }
+  .sponsors {
+    display: flex;
+    justify-content: center;
+    margin-right: -60px;
+  }
+  .sponsors img {
+    width: 50px;
+    height: 30px;
+  }
 
-.first-house {
-  display: flex;
-  justify-content: center;
-  width: 330px;
-  height: 200px;
- margin-left: -60px;
-}
-.retails-houses{
-  display: none;
-}
-.form-data1{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 50px -60px;
-  gap: 40px;
-  /* border: 2px solid black; */
-  width: 330px;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: -4px 0px 20px 0px rgba(19, 20, 32, 0.16);
-}
-#price-range{
-  width: 300px;
-  background: #FAFAFA;
-  color: #999999;
-  border: none;
-  outline: none;
-}
-.Search-form{
-  display: flex;
-  justify-content: center;
-  align-self: flex-end;
-  width: 100px;
-  border-radius: 8px;
-  background: var(--rentit-primary-color-500-main, #3B3386);
-}
-#locations{
-  width: 300px;
-  background-color: #FAFAFA;
-  color: #999999;
-  border: none;
-  outline: none;
-}
-.trusted-by{
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  width: 300px;
-  margin: 20px -50px;
-}
-.sponsors{
-  display: flex;
-  justify-content: center;
-  margin-right: -100px;
-}
-.sponsors img{
-  width: 50px;
-  height: 30px;
+  .explore {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    text-align: center;
+    width: 345px;
+  }
+  .explore-our-platform h3 {
+    width: 200px;
+    font-size: 24px;
+  }
+  .explore-our-platform h6 {
+    width: 200px;
+    font-size: 14px;
+  }
+  .furnished-home {
+    width: 350px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    margin-left: -100px;
+  }
 
-}
-.explore-list{
-  display: flex;
-  flex-direction: column;
-margin: 20px -50px; 
-  width: 305px;
-}
-.line1{
-  border-bottom: 2px solid #ededed;
+  .line1 {
+    display: flex;
+    margin-left: -100px;
+    align-items: center;
+    /* justify-content: flex-start; */
+    border-bottom: 2px solid #ededed;
+    width: 305px;
+  }
+  .feats-props {
+    font-size: 14px;
+    font-weight: 400;
+    width: 300px;
+    color: #9a9a9c;
+  }
+  .island-container {
+    display: flex;
+    flex-direction: column;
+    height: 80px;
+  }
+  .avail-props {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin-left: -40px;
+    margin-top: 0px;
+    margin-bottom: 0;
+    padding: 0;
+  }
+  .left-island-img {
+    width: 70%;
+    border-radius: 10px;
+  }
+  .house-apartment-land {
+    width: 300px;
+    margin: 50px 0px;
+  }
+  .geo-map {
+    width: 350px;
+  }
+  .featured-props {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 12px;
+    margin: 140px 0px;
+    width: 100%;
+  }
+  .explore-our-platform p {
+    font-size: 14px;
+    font-weight: bold;
+    width: 70%;
+    font-family: "Sofa", sans-serif;
+    color: #554e3b;
+    line-height: 20px;
+    margin-top: 15px;
+  }
+  .footer-data-container {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    gap: 50px;
+  }
+  .footer-container {
+    display: none;
+    flex-direction: column;
+    width: 400px;
+    margin-left: -70px;
+    
+  }
+  .footer-data {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .verified-header {
+    width: 50%;
+  }
+  .discover-text p {
+    margin: 0;
+    width: 300px;
+    margin-left: -40px;
+  }
+  .discover-text h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 45px;
+    width: 340px;
+    margin-left: -60px;
+  }
+  .verified-container {
+    width: 370px;
+    margin-left: -80px;
+    margin-bottom: 0px;
+    background-image: url("../src/Images/storey-building.png");
+  }
+  .right-island p{
+    width: 343px;
+    color: var(--neutral-500-main, #636363);
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: start;
+    margin-left: -40px;
+    margin-top: -40px;
+  }
+  .left-island {
+    position: relative;
+    bottom: -200px;
+  }
+  .right-island-img {
+    display: none;
+    width: 350px;
+    margin-left: -50px;
+    margin-top: -70px;
+    padding: 30px 0px;
+  }
+  .coming-soon-page {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    margin-left: -50px;
+  }
+  .massive-building{
+    width: 400px;
+  }
+  .moneytag img {
+    width: 150px;
+  }
+  .reserved-and-social-media{
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 100px;
 
+  }
+  .welcome-apart {
+    width: 350px;
+    text-align: center;
+  }
 }
-.island-container {
-  display: flex;
-  flex-direction: column;
-  height: 80px;
-}
-.avail-props{
-  display: flex;
-  flex-direction: column;
-}
-.left-island-img {
- width: 70%;
-  border-radius: 10px;
-}
-.geo-map {
-  width: 70%;
-}
-.featured-props {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-size: 12px;
-  margin: 140px 0px;
-  width: 100%;
-}
-.explore-our-platform p {
-  font-size: 14px;
-  font-weight: bold;
-  width: 70%;
-  font-family: "Sofa", sans-serif;
-  color: #554E3B;
-  line-height: 20px;
-  margin-top: 15px;
-}
-.footer-data-container {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  flex-direction: column;
-  gap: 50px;
-}
-.footer-container{
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-}
-.footer-data{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.verified-header{
-  width: 50%;
-  
-}
-.discover-text p{
- margin: 0;
- width: 300px;
- margin-left: -40px;
-
-}
-.discover-text h1 {
-  display: flex;
-  justify-content: center;
-  font-size: 45px;
-  width: 340px;
-  margin-left: -60px;
-}
-.verified-container{
-  width: 70%;
-}
-.right-island-img {
-  width: 70%;
-}
-.right-island p{
- width: 50%;
-}
-.moneytag img{
-  width: 150px;
-}
-.welcome-apart{
-  width: 70%;
-}
-  
+.local-area {
+  color: #14112d;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: normal;
+  margin: 10px;
 }
 .hamburger-menu-bar {
   text-align: center;
@@ -650,22 +731,40 @@ margin: 20px -50px;
 }
 
 .modal-content {
-  background-color: #fff;
-  padding: 20px;
+  background-color: black;
+  padding: 100%;
   border-radius: 5px;
+  font-size: 24px;
+  font-weight: 400;
+  text-align: center;
 }
-
+.modal-content ul li {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-top: 20px;
+  font-size: 24px;
+  font-weight: bold;
+}
+a{text-decoration: none;
+  color: white;
+}
 .close {
   float: right;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 50px;
+  color: white;
+  position: relative;
+  top: -170px;
+  right: -100px;
 }
-.block-list{
+.block-list {
   display: none;
 }
-.login-container{
+.login-container {
   display: none;
 }
-.making-post{
+.making-post {
   display: none;
 }
